# ai-interview

./: .gitignore  package-lock.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_evaluation_config.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  admin.py  auth.py  config.py  evaluations.py  face_analysis.py  health.py  questions.py  sessions.py
backend/app/core/: __init__.py  config.py  deps.py  exceptions.py  logging.py  security.py
backend/app/data/seed/: evaluation_config.json  evaluation_criteria.json  industries.json  industry_prefectures.json  learning_step_templates.json  question_bank.json  question_categories.json  scenario_templates.json
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  admin.py  evaluation.py  evaluation_config.py  interview.py  question.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  evaluation.py  evaluation_config.py  face_analysis.py  question.py  session.py  user.py
backend/app/services/: __init__.py  admin_service.py  config_service.py  evaluation_service.py  question_service.py  session_service.py  user_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_health.py
backend/tests/unit/: test_auth.py
docs/images/: CI_CDパイプライン構成図.drawio  アプリケーションアーキテクチャ.drawio  アラート通知フロー.drawio  アーキテクチャ_対応プラットフォーム.drawio  エラーハンドリング_状態遷移図.drawio  企業向け統合評価レポート構成.drawio  画面設計書_2.1_SSOログイン.drawio  画面設計書_2.2_ホーム.drawio  画面設計書_2.2_学習計画進捗カード.drawio  画面設計書_2.2_学習計画進捗カード_初期状態.drawio  画面設計書_2.3.0_練習モード選択.drawio  画面設計書_2.3_チャレンジ選択.drawio  画面設計書_2.3_面接練習.drawio  画面設計書_2.3_面接練習_全画面.drawio  画面設計書_2.4_フィードバック.drawio  画面設計書_2.4_企業向けレポート.drawio  画面設計書_2.5_学習進捗.drawio  画面設計書_2.6.1_ログアウト確認ダイアログ.drawio  画面設計書_2.6_設定.drawio  画面設計書_3.0_管理者ログイン.drawio  画面設計書_3.1_管理者ダッシュボード.drawio  画面設計書_3.2.1_スクリプト編集.drawio  画面設計書_3.2.1_質問編集.drawio  画面設計書_3.2.2_削除確認モーダル.drawio  画面設計書_3.2_スクリプト管理.drawio  画面設計書_3.2_質問管理.drawio  画面設計書_3.3_ユーザー分析.drawio  (+38 more)
poc/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
(+139 files in other folders)
